# python-package-template

./: .gitignore  LICENSE  cookiecutter.json
.devcontainer/: recommended-Dockerfile  recommended-devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  README.rst
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml
python_boilerplate/: .pre-commit-config.yaml  AUTHORS.rst  LICENSE  Makefile  pyproject.toml
python_boilerplate/.devcontainer/: recommended-devcontainer.json
python_boilerplate/.github/: PULL_REQUEST_TEMPLATE.md  README.rst
python_boilerplate/.github/workflows/: pr.yml  release.yml
python_boilerplate/docs/: conf.py  toc.rst
{{ cookiecutter.project_slug }}/: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  Makefile  noxfile.py  pyproject.toml
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json  recommended-Dockerfile  recommended-devcontainer.json
{{ cookiecutter.project_slug }}/.github/: PULL_REQUEST_TEMPLATE.md  README.rst
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
{{ cookiecutter.project_slug }}/.github/workflows/: docs.yml  greetings.yml  pr.yml  release.yml
{{ cookiecutter.project_slug }}/docs/: conf.py  toc.rst
